# cazanw

./: .gitignore  Cargo.toml  Cross.toml  LICENSE_MIT  Makefile
cazanw/: Cargo.toml
cazanw-bin/: Cargo.toml
cazanw-bin/src/: main.rs
cazanw-bin/src/cli/: mod.rs  prebuild.rs  subcommands.rs
cazanw/src/: geometry.rs  lib.rs  triangulation.rs
post-build/: Cargo.toml
post-build/src/: cazanw.js  main.rs
shared/: Cargo.toml
shared/src/: geometry.rs  lib.rs  rdp.rs  triangulation.rs
src/: geometry.rs  image.rs  lib.rs
tests/: web.rs
