[package]
name = "cazanw"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cazanw-bin", "post-build", "shared"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
assert_unordered = "0.3.5"
shared = { path = "./shared", features = ["wasm"] }

[build-dependencies]
serde_json = "1.0.116"

[profile.release]
opt-level = "s"
